@@ -4,6 +4,10 @@ CHANGES
 CVS HEAD
 ------------------------------------------------------------
 
+1999-12-18 warp:
+ Feature:
+  * Added new builtin 'builtin'
+
 1999-12-17 gwhitney:
  Internal:
   * Stab-in-the-dark attempt at a workaround for Schinder's failed
